--- a/scss/main.scss
+++ b/scss/main.scss
@@ -65,7 +65,11 @@ box-shadow: 0px 0px 0px 0px grey;
 background: #FFF;
 color:#A0D4FF;
 }
-
+.btn-secondary:not(:disabled):not(.disabled):active {
+background : #85C7FE;
+color:white;
+border:none;
+}
 .btn-primary {
 background : #A0D4FF;
 border: none;
